--- a/style.css
+++ b/style.css
@@ -1,16 +1,27 @@
 body, html{
     font-family: Arial, Helvetica, sans-serif;
-    /*width: 100%;
-    height: 100%;
+    font-size: 14px;
+    width: 100%;
+    /*height: 100%;*/
     padding: 0;
-    margin: 0;*/
+    margin: 0;
 }
-.top-nav-bar li ~ a{
+article{
+    padding-top: 50px;
+    padding-bottom: 100px;
+}
+.top-nav-bar li {
     text-decoration: none;
-    color: #737373;
     display: inline-block;
     padding: 5px;
     float: right;
+}
+.top-nav-bar a{
+    color: black;
+    text-decoration: none;
+}
+.top-nav-bar a:hover{
+    text-decoration:underline;
 }
 .center{
   display: block;
@@ -18,11 +29,15 @@ body, html{
   margin-right: auto;
   width: 50%;
   padding-top: 109px;
+  padding-bottom: 30px;
   position: static;
 }
 
 #logo{
     width: 50%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 #search_bar form{
     text-align: center;
@@ -38,6 +53,10 @@ body, html{
     -moz-border-radius: 20px;
     -webkit-border-radius: 20px;
 }
+#search_bar form .rounded:hover{
+    border: solid 2px gray;
+    border-radius: 20px;
+}
 #search_bar input[type='submit']{
     background-color: #f2f2f2;
     color: #737373;
@@ -49,26 +68,38 @@ body, html{
 
 footer{
     background-color: #f2f2f2;
-    text-align: left;
-    border-style: solid;
-    border-width: 1px;
-    border-color: #e6e6e6;
     width: 100%;
     height: 100%;
-    margin: 0px;
-    border: 0px;
-    
+    margin: 0px 0px 0px -27px;
+    padding-top:20px;
+    padding-bottom: 20px;
+    padding-right: 27px;
+    padding-left: 27px;
+    border: 1px;
+    border-color: #bebebe;
+}
+.France{
+    border: 1px;
+    color: #737373;
+    float: left;
+    margin: 0px 0px 0px 30px;
+
 }
 .left{
     float: left;
-    margin: auto;
+    margin: 0px 0px 0px 30px;
+    border: 1px;
 }
 .right{
     float: right;
-    margin: auto;
+    margin: 0px 0px 0px 30px;
+    border: 1px;
 }
 footer a{
-    padding: 3px;
+    padding: 5px;
     color: #737373;
     text-decoration: none;
+}
+footer a:hover{
+    text-decoration: underline;
 }
