--- a/style.css
+++ b/style.css
@@ -2,37 +2,48 @@ body, html{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 14px;
     width: 100%;
-    /*height: 100%;*/
+    height: 100%;
     padding: 0;
     margin: 0;
+}
+body p{
+    font-size: 13px;
+}
+body p a{
+    text-decoration: none;
+}
+body p a:hover{
+    text-decoration: underline;
 }
 article{
     padding-top: 50px;
     padding-bottom: 100px;
 }
+.top-nav-bar{
+    float: right;
+}
 .top-nav-bar li {
     text-decoration: none;
     display: inline-block;
-    padding: 5px;
-    float: right;
+    padding: 10px;
 }
 .top-nav-bar a{
     color: black;
     text-decoration: none;
+    text-align: right;
 }
 .top-nav-bar a:hover{
     text-decoration:underline;
 }
 .center{
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
-  padding-top: 109px;
-  padding-bottom: 30px;
-  position: static;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    padding-top: 109px;
+    padding-bottom: 30px;
+    position: static;
 }
-
 #logo{
     width: 50%;
     display: block;
@@ -64,36 +75,31 @@ article{
     height: 40px;
     font-size: 14px;
     border: none;
+    border-radius: 5px;
 }
-
+#search_bar input[type='submit']:hover{
+    border: 1px solid #c2c2c2;
+    border-radius: 5px;
+}
 footer{
+    bottom: 0;
     background-color: #f2f2f2;
     width: 100%;
-    height: 100%;
-    margin: 0px 0px 0px -27px;
-    padding-top:20px;
-    padding-bottom: 20px;
-    padding-right: 27px;
-    padding-left: 27px;
-    border: 1px;
-    border-color: #bebebe;
-}
-.France{
-    border: 1px;
-    color: #737373;
-    float: left;
-    margin: 0px 0px 0px 30px;
-
+    margin: 0px 0px 0px -40px;
+    padding: 10px 10px 10px 27px;
+    border-top: 1px solid #e4e4e4;
+    position: fixed;
+    line-height: 20px;
 }
 .left{
     float: left;
     margin: 0px 0px 0px 30px;
-    border: 1px;
+    bottom: 0;
 }
 .right{
     float: right;
     margin: 0px 0px 0px 30px;
-    border: 1px;
+    bottom: 0;
 }
 footer a{
     padding: 5px;
